docs: add self-contained AI RPC integration guide, rewrite README, add MIT license